2016-11-06	Let static relocations lie.  (2)

		include/innocent-pear/lolwut.h :
		- for ARM,
		  - now makes sure that lolwut_impl<...>::Disp is even,
		    to work around a bug (?) in binutils in handling Thumb
		    function symbols
		  - added code for case where Thumb sans Thumb-32 but with
		    dynamic linking

		.travis.yml :
		- added test setups for armv6 and armv4t with dynamic
		  linking, since the going is getting weird...

2016-11-05	"There is more to life than increasing its speed."

		include/innocent-pear/rofl.h :
		- for ARM, now scrambles calls to the syscall routine(s)
		- reduced layers of scrambling of syscall parameters

		share/innocent-pear/doge-06.cc :
		- split main routine into two; moved cache clearing after
		  relocation processing

2016-11-04	Yes, it still compiles!  ;-)

		GNUmakefile :
		- now dumps smaller portions of compiled test binaries (again)

		include/innocent-pear/kthxbai.h ,
		include/innocent-pear/omg.h :
		- upped default scrambling levels (again)

		include/innocent-pear/rofl.h :
		- upped default scrambling levels
		- now uses `no_cfi' attribute on rofl_impl_syscall<...>::
		  syscall_raw(...) for ARM

		share/innocent-pear/doge-01.cc :
		- split huge function into 3 parts
		- explicitly specified fewer scrambling levels for a few calls

		share/innocent-pear/doge-07.cc :
		- explicitly specified fewer scrambling levels for pretty much
		  all calls

		share/innocent-pear/doge-i.h :
		- reduced the amount of chaff from innocent_pear_CHAFF(.)

		doc/20161104-test-doge-abs-reloc-armv7-a.png :
		- new

		README.md :
		- changed illustration

2016-11-03	A bit less resource wastage at compile time.  A bit more
		branching at run time.

		bin/innocent-pear-front-end.tcc :
		- now closes temporary */calm file descriptor if running
		  C(++) compiler as child process
		- reduced memory leakage for child process parameters

		include/innocent-pear/omg.h :
		- added possibility of choosing between two omg<...>::omg(.)'s
